details scrollbar fix for firefox

--- a/src/_includes/styles/details.css
+++ b/src/_includes/styles/details.css
@@ -9,6 +9,7 @@ details {
   box-shadow: var(--shadow-1);
   margin-block: var(--gap);
   overflow: auto;
+  scrollbar-width: none;
 }
 
 /**
